--- a/dislinktxws-front/src/app/post/post.component.html
+++ b/dislinktxws-front/src/app/post/post.component.html
@@ -29,7 +29,7 @@
       </thead>
       <tbody >
     <tr  *ngFor="let post of posts"  >  
-              <td>{{post.ownerId}}</td><td>{{post.text}}</td><td>{{post.likes}}</td><td>{{post.dislikes}}</td><td>{{post.comments}}</td>
+              <td>{{post.ownerId}}</td><td>{{post.text}}</td><td>{{post.userIdWhoLikes}}</td><td>{{post.userIdWhoDislikes}}</td><td>{{post.comments}}</td>
           </tr>
   </tbody>
   </table>
