--- a/dislinktxws-front/src/app/registration/registration.component.html
+++ b/dislinktxws-front/src/app/registration/registration.component.html
@@ -25,7 +25,7 @@
         <input id="username" name="username" type="text" [(ngModel)]="newUser.username"><br/>
 
         <label for="password">Password:</label><br/>
-        <input id="passworde" name="passworde" type="password" [(ngModel)]="newUser.passworde"><br/>
+        <input id="password" name="password" type="password" [(ngModel)]="newUser.password"><br/>
 
         <label for="dateOfBirth">Date Of Birth:</label><br/>
         <input id="dateOfBirth" name="dateOfBirth" type="text" [(ngModel)]="newUser.dateOfBirth"><br/>
