--- a/dislinktxws-front/src/app/navbar/navbar.component.html
+++ b/dislinktxws-front/src/app/navbar/navbar.component.html
@@ -7,5 +7,5 @@
  <a mat-button>Post</a>
  <a mat-button>Profile</a>
  <a mat-button>Afasfafs</a> 
- <a mat-raised-button color="accent">Log in</a> 
+ <a mat-raised-button color="accent" routerLink="login">Log in</a> 
 </mat-toolbar>
