--- a/dislinktxws-front/src/app/user-profile/user-profile.component.html
+++ b/dislinktxws-front/src/app/user-profile/user-profile.component.html
@@ -2,13 +2,52 @@
     <form >
         <label for="firstName">First name :</label>
         <p>{{profile.user.firstName}}</p>
-       <!-- <label for="lastName">Last name: </label>
-        <p>{{user.lastName}}</p>
+       <label for="lastName">Last name: </label>
+        <p>{{profile.user.lastName}}</p>
         <label for="email">Email: </label>
-        <p>{{user.email}}</p>
+        <p>{{profile.user.email}}</p>
         <label for="username">Username:</label>
-        <p>{{user.username}}</p>
+        <p>{{profile.user.username}}</p>
         <label for="dateOfBirth">Date of birth:</label>
-        <p>{{user.dateOfBirth}}</p>-->
+        <p>{{profile.user.dateOfBirth}}</p>
+        <label for="experience">Experience </label>
+        <ul>
+            <li ng-repeat="experience">{{profile.experience}}</li>
+        </ul>
+        <label for="education">Education </label>
+        <ul>
+            <li ng-repeat="education">{{profile.education}}</li>
+        </ul>
+        <label for="interests">Interests</label>
+        <ul>
+            <li ng-repeat="interests">{{profile.interests}}</li>
+        </ul>
+        <label for="skills">Skills </label>
+        <ul>
+            <li ng-repeat="skills">{{profile.skills}}</li>
+        </ul>
+        <label for="isPrivate">Profil is:</label>
+        <p>{{profile.isPrivate}}</p>
+        <br>
+        <button class="btn btn-success" (click)="followProfile()">Follow</button>
+       
+        
     </form>
+</div>
+
+<div class="container">
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>ownerId</th>
+                <th>Text</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let post of posts">
+                <td>{{post.ownerId}}</td>
+                <td>{{post.text}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
