Added Back for update Profile and small fixes at front.

--- a/dislinktxws-front/src/app/all-profiles/all-profiles.component.html
+++ b/dislinktxws-front/src/app/all-profiles/all-profiles.component.html
@@ -25,7 +25,7 @@
                 <th>Education</th>
                 <th>Interests</th>
                 <th>Skills</th>
-                <th>Is Private Profile</th>
+                <th>Private Profile</th>
             </tr>
         </thead>
         <tbody >
@@ -45,3 +45,5 @@
       </tbody>
     </table>
   </div>
+
+  
