--- a/dislinktxws-front/src/app/profile-search/profile-search.component.html
+++ b/dislinktxws-front/src/app/profile-search/profile-search.component.html
@@ -2,6 +2,8 @@
 
 <div class = "Profile">
     <form >
+        <label for="id">Profile:</label>
+        <p>{{profile.id}}</p>
         <label for="firstName">First name :</label>
         <p>{{profile.user.firstName}}</p>
        <label for="lastName">Last name: </label>
@@ -34,4 +36,21 @@
        
         
     </form>
+</div>
+
+<div class="container">
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>ownerId</th>
+                <th>Text</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let post of posts">
+                <td>{{post.ownerId}}</td>
+                <td>{{post.text}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
