--- a/dislinktxws-front/src/app/user-profile/user-profile.component.html
+++ b/dislinktxws-front/src/app/user-profile/user-profile.component.html
@@ -26,8 +26,8 @@
         <ul>
             <li ng-repeat="skills">{{profile.skills}}</li>
         </ul>
-        <label for="isPrivate">Profil is:</label>
-        <p>{{profile.isPrivate}}</p>
+        <label for="privateProfile">Profil is:</label>
+        <p>{{profile.privateProfile}}</p>
         <br>
         <button class="btn btn-success" (click)="followProfile()">Follow</button>
        
@@ -35,7 +35,23 @@
     </form>
 </div>
 
-<div class="container">
+<div class="container" *ngIf="
+profile.privateProfile">
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Profiles that want to follow you</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let f of followRequests">
+                <td>{{f.usernameWhoWantToFollow}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="container" *ngIf="!profile.privateProfile">
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
