small changes in front and back.

--- a/dislinktxws-front/src/app/all-profiles/all-profiles.component.html
+++ b/dislinktxws-front/src/app/all-profiles/all-profiles.component.html
@@ -40,7 +40,7 @@
                 <td>{{profile.education}}</td>
                 <td>{{profile.interests}}</td>
                 <td>{{profile.skills}}</td>
-                <td>{{profile.isPrivate}}</td>
+                <td>{{profile.privateProfile}}</td>
      </tr>
       </tbody>
     </table>
