--- a/dislinktxws-front/src/app/profile-search/profile-search.component.html
+++ b/dislinktxws-front/src/app/profile-search/profile-search.component.html
@@ -66,7 +66,7 @@
         <label for="isPrivate">Profil is:</label>
         <!--<p>{{profile.isPrivate}}</p> -->
         <div class="form-group text-center">
-            <input [(ngModel)]="profile.isPrivate" id="isPrivate" name="isPrivate" type="text" class="from-control">
+            <input [(ngModel)]="profile.privateProfile" id="privateProfile" name="privateProfile" type="text" class="from-control">
           </div>
         <br>
        </form>
