--- a/dislinktxws-front/src/app/navbar/navbar.component.html
+++ b/dislinktxws-front/src/app/navbar/navbar.component.html
@@ -4,8 +4,8 @@
  <div class = "spacer"></div>
 
  <a mat-button>Home</a>
- <a mat-button>Post</a>
- <a mat-button>Profile</a>
- <a mat-button>Afasfafs</a> 
+ <a mat-button routerLink="all_profiles">Search profile</a>
+ <a mat-button>Profiles </a>
+ <a mat-button routerLink="registration">Registration</a> 
  <a mat-raised-button color="accent" routerLink="login">Log in</a> 
 </mat-toolbar>
