Fixed For Update Profile

--- a/dislinktxws-front/src/app/navbar/navbar.component.html
+++ b/dislinktxws-front/src/app/navbar/navbar.component.html
@@ -4,8 +4,10 @@
  <div class = "spacer"></div>
 
  <a mat-button>Home</a>
+ <a mat-button routerLink="find_profile_update">Update profile</a>
  <a mat-button routerLink="all_profiles">Search profile</a>
  <a mat-button>Profiles </a>
  <a mat-button routerLink="registration">Registration</a> 
- <a mat-raised-button color="accent" routerLink="login">Log in</a> 
+ <a mat-raised-button color="accent" routerLink="login">Log in</a>
+ 
 </mat-toolbar>
