--- a/dislinktxws-front/src/app/user-profile/user-profile.component.html
+++ b/dislinktxws-front/src/app/user-profile/user-profile.component.html
@@ -30,6 +30,13 @@
         <p>{{profile.privateProfile}}</p>
         <br>
         <button class="btn btn-success" (click)="followProfile()">Follow</button>
+
+
+        <!--<div *ngIf ="idProfile != 0"> -->
+        <div *ngIf = "!profile.privateProfile">
+        <button class="btn btn-success" (click)="UpdateProfile()">Update</button>
+        </div>
+
        
         
     </form>
@@ -50,6 +57,8 @@ profile.privateProfile">
         </tbody>
     </table>
 </div>
+
+
 
 <div class="container" *ngIf="!profile.privateProfile">
     <table class="table table-striped table-bordered">
