like and dislike post and upload image

--- a/dislinktxws-front/src/app/comment/comment.component.html
+++ b/dislinktxws-front/src/app/comment/comment.component.html
@@ -1,7 +1,7 @@
 <div class = "comment-input">
     <form >
-        <label for="userId">User ID :</label><br/>
-        <input name="userId" id="userId" type="text" [(ngModel)]="newCommentForPost.comment.userId"><br/>
+        <!--<label for="userId">User ID :</label><br/>
+        <input name="userId" id="userId" type="text" [(ngModel)]="newCommentForPost.comment.userId"><br/>-->
         <label for="content">Content:</label><br/>
         <input id="content" name="content" [(ngModel)]="newCommentForPost.comment.content"><br/>
   
