--- a/dislinktxws-front/src/app/user-profile/user-profile.component.html
+++ b/dislinktxws-front/src/app/user-profile/user-profile.component.html
@@ -70,6 +70,11 @@
     </table>
 </div>
 
+<div class="container" *ngIf="!showFollowButton()">
+    <label>Create post</label>
+    <button class="btn btn-success" (click)="createPostPage()">Create</button>
+</div>
+
 <div class="container" *ngIf="(!profile.privateProfile || !showFollowButton() || showPostsOnPrivateProfile()) ">
     <table class="table table-striped table-bordered">
         <thead>
@@ -83,6 +88,17 @@
                 <td>{{post.ownerId}}</td>
                 <td>{{post.text}}</td>
                 <td><img src = "{{post.picture}}" style="height: 50px; border-radius: 50px;"></td>
+                <button (click)="likePost(post)">
+                    <mat-icon>thumb_up</mat-icon>Like
+                  </button>
+                <td>{{post.numberOfLikes}}</td>
+                <button (click)="dislikePost(post)">
+                    <mat-icon>thumb_down</mat-icon>Dislike
+                </button>
+                <td>{{post.numberOfDislikes}}</td>
+                <button  (click)="addComent(post.id)">
+                    <mat-icon> comment</mat-icon>Comment
+                </button>
             </tr>
         </tbody>
     </table>
