complete front and back for job offer and update profile.

--- a/dislinktxws-front/src/app/all-jobs/all-jobs.component.html
+++ b/dislinktxws-front/src/app/all-jobs/all-jobs.component.html
@@ -1,4 +1,4 @@
-<p>all-jobs works!</p>
+
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 <head>
@@ -11,7 +11,7 @@
 <input name = "position" id = "position" type = "text" [(ngModel)] = "position"><br>
 
 <button class="btn btn-success" (click)="JobOfferProfile()">Search</button>
-
+<button class="btn btn-success" (click)="CreateJobOffer()">New Job Offer</button>
 <div>
     <table class="table table-striped ">
         <thead>
