--- a/dislinktxws-front/src/app/profile-search/profile-search.component.html
+++ b/dislinktxws-front/src/app/profile-search/profile-search.component.html
@@ -45,6 +45,10 @@
             <pre>{{profile.experience}}</pre>
             
             </div>
+            <label>Experiance</label>
+            <div >
+               <input  [(ngModel)]="listsOfExperiance"  id="experience" name="experience"  type="text" >
+            </div>
         
           
        
