--- a/dislinktxws-front/src/app/navbar/navbar.component.html
+++ b/dislinktxws-front/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
  
  <div class = "spacer"></div>
 
- <a mat-button>Home</a>
+ <a mat-button routerLink="posts/profileIFollowed">Home</a>
  <a mat-button routerLink="all_jobs">JobOffers</a>
  <a mat-button routerLink="find_profile_update">Update profile</a>
  <a mat-button routerLink="all_profiles">Search profile</a>
