--- a/agent-front/agent-frontend/src/app/navbar/navbar.component.html
+++ b/agent-front/agent-frontend/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
     
     <div class = "spacer"></div>
    
-    <a mat-button>Home</a>
-    <a mat-button >JobOffers</a>
+    <a mat-button >Home</a>
+    <a mat-button routerLink="all_jobs" >JobOffers</a>
     <a mat-button >Update profile</a>
     <a mat-button >Search profile</a>
     <a mat-button >My profile</a>
