Added registration for agent.

--- a/agent-front/agent-frontend/src/app/navbar/navbar.component.html
+++ b/agent-front/agent-frontend/src/app/navbar/navbar.component.html
@@ -5,10 +5,9 @@
    
     <a mat-button >Home</a>
     <a mat-button routerLink="all_jobs" >JobOffers</a>
-    <a mat-button >Update profile</a>
-    <a mat-button >Search profile</a>
-    <a mat-button >My profile</a>
-    <a mat-button >Registration</a> 
+    <a mat-button routerLink="agent/registration" >Registration</a> 
+    <a mat-button routerLink="agents" >All Agents</a> 
+
     <a mat-raised-button color="accent" >Log in</a>
     
    </mat-toolbar>
