insert data modified

--- a/dislinktxws-front/src/app/one-post/one-post.component.html
+++ b/dislinktxws-front/src/app/one-post/one-post.component.html
@@ -5,9 +5,9 @@
         <p>{{post.ownerId}}</p>
         <label for="text">Text:</label><br/>
         <p>{{post.text}}</p>
-        <label for="like">Likes: </label><br/>
+        <!--<label for="like">Likes: </label><br/>
         <label for="dislike">Disikes:</label><br/>
-        <label for="coments">Comments:</label><br/>
+        <label for="coments">Comments:</label><br/>-->
 
         <button class="btn btn-success" (click)="backToPosts()">Back to posts</button>
         <button class="btn btn-success" (click)="backToProfile()">Back to profile</button>
