--- a/dislinktxws-front/src/app/post/post.component.html
+++ b/dislinktxws-front/src/app/post/post.component.html
@@ -13,6 +13,7 @@
         <button class="btn btn-success" (click)="savePost()">save</button>
     </form>
 </div>
+<!--
 <div>
   <table class="table table-striped ">
       <thead>
@@ -26,4 +27,4 @@
           </tr>
   </tbody>
   </table>
-</div>
+</div>-->
